--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
   <script type="text/javascript" src="./lib/leaflet/Leaflet.Editable.js"></script>
   <script type="text/javascript" src="./lib/leaflet/Path.Drag.js"></script>
   <script type="text/javascript" src="./lib/leaflet/leaflet-pip.js"></script>
-  <link rel="stylesheet" href="lib/leaflet/Control.FullScreen.css" />
-  <script src="./lib/leaflet/Control.FullScreen.js"></script>    
+  <link rel="stylesheet" href="lib/leaflet/leaflet.fullscreen-master/Control.FullScreen.css" />
+  <script src="./lib/leaflet/leaflet.fullscreen-master/Control.FullScreen.js"></script>    
 
 
 
